# lmdi-ida-norway

./: LMDI-IDA-analysis.ipynb  LMDI-analyse.html  README.md  pyproject.toml
LMDI_ready/: sektor_kaya.csv
data/: sektor_kaya.csv
src/: df_funcs.py  lmdi_module.py  plot_funcs.py
