[tool.poetry]
name = "lmdi-ida-norway"
version = "0.1.0"
description = "Dependencies for LMDA-IDA analysis"
authors = ["benediktgoodman <bgo@ssb.no>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^2.1.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
